# iCVIPLib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  version.txt
build_scripts/aarch64_qnx/: build_700.sh
build_scripts/android/: build_armv7a.sh  build_armv8a.sh
build_scripts/x86_64_linux/: build.sh
cmake/: aarch64_linux.toolchain.cmake  aarch64_qnx700.toolchain.cmake  aarch64_qnx710.toolchain.cmake  arm_linux.toolchain.cmake  func.cmake  platform.cmake  x86_64_linux.toolchain.cmake
source/iCVIPLib/: CMakeLists.txt  iCVIPLib.cpp
source/iCVIPLibApi/: CMakeLists.txt  iCVIPLibApi.cpp  iCVIPLibApi.h  iCVIPLib_config.h.in  iCVSafeOpenCVBase.cpp  iCVSafeOpenCVBase.h  iCVSafeOpenCVReal.hpp
source/iCVIPLibTest/: CMakeLists.txt  iCVIPLibTest.cpp
source/include/core/: nanodet_decode.hpp  nms.hpp
source/include/opencv2/: cvconfig.h
source/include/utils/: Singleton.hpp
